complete the first part

--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My-First_Assessment</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <section class="display">
+        <div id="toptopper" class="topper">
+            <h1>How to Give Yourself</h1>
+            <h1>Freedom to Eat </h1>
+
+            <p>Finally feeling in control of food, instead of food controlling you. It means indulging when you decide
+                it’s worth it, savouring the experience without guilt or shame, and then returning to your regularly
+                scheduled healthy habits.</p>
+            <a class="button" target="_blank" href="https://www.mcdonalds.com/us/en-us.html">Order Food!</a>
+
+        </div>
+        <div class="topper">
+            <img src="img/koysor2.png" alt="">
+        </div>
+    </section>
 
 </body>
 
