Added Second layer

--- a/index.html
+++ b/index.html
@@ -16,16 +16,35 @@
     <section class="display">
         <div id="toptopper" class="topper">
             <h1>How to Give Yourself</h1>
-            <h1>Freedom to Eat </h1>
+            <h1><span class="toppertag">Freedom </span> to Eat </h1>
 
-            <p>Finally feeling in control of food, instead of food controlling you. It means indulging when you decide
-                it’s worth it, savouring the experience without guilt or shame, and then returning to your regularly
-                scheduled healthy habits.</p>
+            <p>We all die if, we don't eat properly.And there are two terms came when we choose our diet.Healty and
+                Unhealty!In this world there are millions of Restaurent are available.Among them we are the best
+                Restaurent all over the Europe.Youknow why we are best! because only we offer Bangladeshi traditional
+                food in Germany.Like alu-vorta,hutki-sira,suto-mola mas,sylheti hatkora with gorur magso, though this
+                food name confuse you but don't worry this regard for their nativ name. So Order as soon as possible
+                before we ran out.</p>
             <a class="button" target="_blank" href="https://www.mcdonalds.com/us/en-us.html">Order Food!</a>
 
         </div>
         <div class="topper">
             <img src="img/koysor2.png" alt="">
+        </div>
+    </section>
+    <section id="secondpart" class="display">
+        <div class="middle">
+            <img src="img/Person Image.png" alt="">
+
+        </div>
+        <div class="middle">
+            <h1>About Me</h1>
+            <p>Hii! This is sabina Yasmin, i am from Germany.I am the main chef of this Restaurent.
+                Usually i make here Chingara,Somocha and Bangladeshi special milk tea.Youknow this milk came form
+                Bangladesh,
+                In my Restaurent there are 100 Bangladeshi people work here.I am very proud them, cause i learn those
+                skill form them and run this Restaurent
+            </p>
+            <a class="button" target="_blank" href="https://en.wikipedia.org/wiki/Julia_Komp">Contact Me</a>
         </div>
     </section>
 
