added third section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,42 @@
             <a class="button" target="_blank" href="https://en.wikipedia.org/wiki/Julia_Komp">Contact Me</a>
         </div>
     </section>
+    <section>
+        <div>
+            <h2 class="thirdpart">My Recipies</h2>
+            <p class="thirdpart">There are a lot of item we try to provid in online, due to corona Virus We offer a
+                littel item.
+                like dhal
+                Vhat , alu vorta, rui mas er jhul after corona virus we will open physically then we have plan that we
+                will make a menu list with 2000 item so thnaks for today </p>
+        </div>
+        <div id="imgsection">
+            <div class="supermodel">
+                <div><img src="img/dhal.png" alt=""></div>
+                <div>
+                    <h2>Mosure Dhal Vhuna</h2>
+                    <p>This is Lentil Carry. its nativ name is mosurer dahal this cook idea came form south Asia </p>
+                </div>
+            </div>
+            <div class="supermodel">
+                <div><img src="img/magso.jpg" alt=""></div>
+                <div>
+                    <h2>Shatkor with cow meat</h2>
+                    <p>This is a meat item Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, molestiae.
+                    </p>
+                </div>
+            </div>
+            <div class="supermodel">
+                <div><img src="img/Project Cover1.jpg" alt=""></div>
+                <div>
+                    <h2>vitter salad</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ad consequuntur placeat, non est
+                        expedita.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 </body>
 
