--- a/index.html
+++ b/index.html
@@ -81,8 +81,26 @@
                 </div>
             </div>
         </div>
+        <div id="lowerpart">
+            <div>
+                <h1>700k</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div>
+                <h1>2.5m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div>
+                <h1>100k</h1>
+                <p>Dribble Shots Likes</p>
+            </div>
+        </div>
 
     </section>
+    <footer class="footer">
+        <h2>Food Network</h2>
+        <p>Eat Healty to live Healty. Live Healty to live Happy</p>
+    </footer>
 
 </body>
 
