--- a/index.html
+++ b/index.html
@@ -60,24 +60,30 @@
             <div class="supermodel">
                 <div><img src="img/dhal.png" alt=""></div>
                 <div>
-                    <h2>Mosure Dhal Vhuna</h2>
-                    <p>This is Lentil Carry. its nativ name is mosurer dahal this cook idea came form south Asia </p>
+                    <h2>Lentil Curry</h2>
+                    <p>To make Creamy Coconut Lentil Curry is a healthy vegan recipe that makes a perfect
+                        meatless Monday dinner recipe. It takes less than an hour (mostly hands-off time) to make and is
+                        packed full of delicious Indian flavors. Make extras and you'll have a giant smile on your face
+                        at lunch the next day.</p>
                 </div>
             </div>
             <div class="supermodel">
                 <div><img src="img/magso.jpg" alt=""></div>
                 <div>
-                    <h2>Shatkor with cow meat</h2>
-                    <p>This is a meat item Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, molestiae.
+                    <h2>Bangladeshi beef shatkora</h2>
+                    <p>This Bangladeshi beef shatkora recipe is a dish of contrasts. Rich spiced beef is balanced with
+                        the sour bitter flavour of the shatkora, a type of citrus fruit grown in the country. A stunning
+                        curry typically eaten during autumn
                     </p>
                 </div>
             </div>
             <div class="supermodel">
                 <div><img src="img/Project Cover1.jpg" alt=""></div>
                 <div>
-                    <h2>vitter salad</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ad consequuntur placeat, non est
-                        expedita.</p>
+                    <h2>Bitter Gourd</h2>
+                    <p>Heat oil in a pan, then add sliced onions in it, when the onions have turned translucent, add the
+                        green chillies, bitter gourd pieces, salt in it, then stir & fry without covering the lid, in
+                        low flame in order to keep the fresh green colour of the gourd.</p>
                 </div>
             </div>
         </div>
@@ -98,8 +104,8 @@
 
     </section>
     <footer class="footer">
-        <h2>Food Network</h2>
-        <p>Eat Healty to live Healty. Live Healty to live Happy</p>
+        <h2> <span class="footerfood">Food</span> Blog</h2>
+        <p> If you give money to poor guy he knows how to spend them</p>
     </footer>
 
 </body>
