add some ficture

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="button" target="_blank" href="https://en.wikipedia.org/wiki/Julia_Komp">Contact Me</a>
         </div>
     </section>
-    <section>
+    <section id="lastpart">
         <div>
             <h2 class="thirdpart">My Recipies</h2>
             <p class="thirdpart">There are a lot of item we try to provid in online, due to corona Virus We offer a
@@ -88,15 +88,15 @@
             </div>
         </div>
         <div id="lowerpart">
-            <div>
+            <div class="upperfot">
                 <h1>700k</h1>
                 <p>Youtube Subscribers</p>
             </div>
-            <div>
+            <div class="upperfot">
                 <h1>2.5m</h1>
                 <p>Instagram Followers</p>
             </div>
-            <div>
+            <div class="upperfot">
                 <h1>100k</h1>
                 <p>Dribble Shots Likes</p>
             </div>
