add footer p tag

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </section>
     <footer class="footer">
         <h2> <span class="footerfood">Food</span> Blog</h2>
-        <p> If you give money to poor guy he knows how to spend them</p>
+        <p>People who love to eat are always the best people.</p>
     </footer>
 
 </body>
