add color button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-First_Assessment</title>
+    <link rel="shortcut icon" href="img/junk_food.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +45,7 @@
                 In my Restaurent there are 100 Bangladeshi people work here.I am very proud them, cause i learn those
                 skill form them and run this Restaurent
             </p>
-            <a class="button" target="_blank" href="https://en.wikipedia.org/wiki/Julia_Komp">Contact Me</a>
+            <a id="secondbutton" target="_blank" href="https://en.wikipedia.org/wiki/Julia_Komp">Contact Me</a>
         </div>
     </section>
     <section id="lastpart">
